les dernieres modifications

--- a/present-cv.html
+++ b/present-cv.html
@@ -2,14 +2,14 @@
 <html lang="fr">
   <head>
     <meta charset="utf-8">
-    <title>Curriculum vitae</title>
+    <title>Present CV</title>
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,300;0,400;0,700;1,400&display=swap" >
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
       <div class="cv-container">
         <div class="left-column">
-          <img class="portait" src="IMG-20211129-WA0016.jpg" />
+          <img class="portait" src="photo.jpg" />
           <div class="section">
             <h2><span class="border">À propos de moi : </span></h2>
             <p>
@@ -29,7 +29,7 @@
           </div>
           <div class="section">
             <h2><span class="border">C o o r d o n n é e s </span></h2><br>
-            <img src="telephone.png" alt="logo telephone" width="9%" height="1.5%" class="item">     + 33 7 53 74 73 60 <br>
+            <a target="_blank" href="tel:+ 33 7 53 74 73 60"><img src="telephone.png" alt="logo telephone" width="9%" height="1.5%" class="item"></a>     + 33 7 53 74 73 60 <br>
             <a target="_blank" href="mailto:mohamedlaminezeghar@gmail.com"><img src="mail.png" alt="logo email" width="7%" height="1.5%" ></a> <span class="email" > mohamedlaminezeghar@gmail.com </span><br>
             <a target="_blank" href="https://goo.gl/maps/g5jvys1jnntDoejP8"><img src="location.png" alt="logo adresse"width="10%" height="2%" ></a>    24 Rue des recolettes 13001, Marseille <br>
             <a target="_blank" href="https://github.com/edlamine"><img src="github.png" alt=" logo gihub " width="8%" height="1.5%" ></a>    edlamine<br>
@@ -71,15 +71,15 @@
               <h2><span class="border">P r o j e t s </span></h2>
               <p>
                 Game of life
-                <span class="petit-italic">Avec Java</span>
+                <a target="_blank" href="https://playgameoflife.com/" style="text-decoration: none;"><span class="petit-italic"  style="color: rgb(224, 148, 148;">Avec Java</span></a>
               </p>
               <p>
                 The mandelbrot
-                <span class="petit-italic">Avec Java</span>
+                <a target="_blank" href="mandelbrot.jpg" style="text-decoration: none;"><span class="petit-italic"  style="color: rgb(224, 148, 148;">Avec Java</span></a>
               </p>
               <p>
                 Flood-It!
-                <span class="petit-italic">Avec Java</span>
+                <a target="_blank" href="https://unixpapa.com/floodit/" style="text-decoration: none;"><span class="petit-italic"  style="color: rgb(224, 148, 148;">Avec Java</span></a>
               </p>
             </div>
             <div class="section">
