la derniere modification

--- a/competences.html
+++ b/competences.html
@@ -10,14 +10,10 @@
         <div class="section">
             <h2><span class="border">E x p é r i e n c e s </span></h2>
             <ul>
-                <li>Developpeur Full Stack</li>
+                <li>Developpeur Full Stack <span class="introduction">  Web/App</span> </li>
+                <li>Java, C, C++, Python, SQL, HTML5, CSS3, PHP, JavaScript, Kotlin<span class="situation">(Intellij IDEA, Code::Blocks, Pycharm, Spyder, Oracle, Visual Studio Code)</span></li>
             </ul>
-            <p>
-              <span class="introduction">  Developpeur Full Stack</span>
-              <br>
-              McDonald's France <br>
-              <span class="petit-italic">Mai 2022 - En cours</span>
-            </p>
+            
         </div>
     </body>
 </html>
